--- a/analytics.html
+++ b/analytics.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="build/main.css">
 		<title> DeFi Design Kit</title>
 		<link rel="icon" href="img/favicon.png" type="image/x-icon" />
-		
+		<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
 	</head>
 	<body class="">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" integrity="sha256-x8PYmLKD83R9T/sYmJn1j3is/chhJdySyhet/JuHnfY=" crossorigin="anonymous" />
@@ -284,6 +284,322 @@ var chart = new Chart(ctx, {
     options: chartOptions
 });
 </script>
+<!---- END 3 ANALYTICS CARDS LINE CHART-->
+<!--- start statistic cards -->
+<div class="grid gap-6 mb-8 md:grid-cols-2 xl:grid-cols-4">
+    <div
+      class="min-w-0 rounded-lg shadow-xs overflow-hidden bg-white dark:bg-gray-800"
+    >
+      <div class="p-4 flex items-center">
+        <div
+          class="p-3 rounded-full text-orange-500 dark:text-orange-100 bg-orange-100 dark:bg-orange-500 mr-4"
+        >
+          <svg fill="currentColor" viewBox="0 0 20 20" class="w-5 h-5">
+            <path
+              d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"
+            ></path>
+          </svg>
+        </div>
+        <div>
+          <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
+            Total clients
+          </p>
+          <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
+            6389
+          </p>
+        </div>
+      </div>
+    </div>
+    <div
+      class="min-w-0 rounded-lg shadow-xs overflow-hidden bg-white dark:bg-gray-800"
+    >
+      <div class="p-4 flex items-center">
+        <div
+          class="p-3 rounded-full text-green-500 dark:text-green-100 bg-green-100 dark:bg-green-500 mr-4"
+        >
+          <svg fill="currentColor" viewBox="0 0 20 20" class="w-5 h-5">
+            <path
+              fill-rule="evenodd"
+              d="M4 4a2 2 0 00-2 2v4a2 2 0 002 2V6h10a2 2 0 00-2-2H4zm2 6a2 2 0 012-2h8a2 2 0 012 2v4a2 2 0 01-2 2H8a2 2 0 01-2-2v-4zm6 4a2 2 0 100-4 2 2 0 000 4z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </div>
+        <div>
+          <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
+            Account balance
+          </p>
+          <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
+            $ 46,760.89
+          </p>
+        </div>
+      </div>
+    </div>
+    <div
+      class="min-w-0 rounded-lg shadow-xs overflow-hidden bg-white dark:bg-gray-800"
+    >
+      <div class="p-4 flex items-center">
+        <div
+          class="p-3 rounded-full text-blue-500 dark:text-blue-100 bg-blue-100 dark:bg-blue-500 mr-4"
+        >
+          <svg fill="currentColor" viewBox="0 0 20 20" class="w-5 h-5">
+            <path
+              d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
+            ></path>
+          </svg>
+        </div>
+        <div>
+          <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
+            New sales
+          </p>
+          <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
+            376
+          </p>
+        </div>
+      </div>
+    </div>
+    <div
+      class="min-w-0 rounded-lg shadow-xs overflow-hidden bg-white dark:bg-gray-800"
+    >
+      <div class="p-4 flex items-center">
+        <div
+          class="p-3 rounded-full text-teal-500 dark:text-teal-100 bg-teal-100 dark:bg-teal-500 mr-4"
+        >
+          <svg fill="currentColor" viewBox="0 0 20 20" class="w-5 h-5">
+            <path
+              fill-rule="evenodd"
+              d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </div>
+        <div>
+          <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
+            Pending contacts
+          </p>
+          <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">35</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!---- end statistic cards -->
+
+<!---- STart Line Chart Stock Module-->
+<div class="min-w-screen flex items-center justify-center px-5 py-5">
+    <div class="rounded shadow-xl overflow-hidden w-full md:flex" style="max-width:900px" x-data="{stockTicker:stockTicker()}" x-init="stockTicker.renderChart()">
+        <div class="flex w-full md:w-1/2 px-5 pb-4 pt-8 bg-indigo-500 text-white items-center">
+            <canvas id="chart" class="w-full"></canvas>
+        </div>
+        <div class="flex w-full md:w-1/2 p-10 bg-gray-100 text-gray-600 items-center">
+            <div class="w-full">
+                <h3 class="text-lg font-semibold leading-tight text-gray-800" x-text="stockTicker.stockFullName"></h3>
+                <h6 class="text-sm leading-tight mb-2"><span x-text="stockTicker.stockShortName"></span>&nbsp;&nbsp;-&nbsp;&nbsp;Aug 2nd 4:00pm AEST</h6>
+                <div class="flex w-full items-end mb-6">
+                    <span class="block leading-none text-3xl text-gray-800" x-text="stockTicker.price.current.toFixed(3)">$410</span>
+                    <span class="block leading-5 text-sm ml-4 text-green-500" x-text="`${stockTicker.price.high-stockTicker.price.low<0?'▼':'▲'} ${(stockTicker.price.high-stockTicker.price.low).toFixed(3)} (${(((stockTicker.price.high/stockTicker.price.low)*100)-100).toFixed(3)}%)`"></span>
+                </div>
+                <div class="flex w-full text-xs">
+                    <div class="flex w-5/12">
+                        <div class="flex-1 pr-3 text-left font-semibold">Open</div>
+                        <div class="flex-1 px-3 text-right" x-text="stockTicker.price.open.toFixed(3)">250</div>
+                    </div>
+                    <div class="flex w-7/12">
+                        <div class="flex-1 px-3 text-left font-semibold">Market Cap</div>
+                        <div class="flex-1 pl-3 text-right" x-text="stockTicker.price.cap.m_formatter()">200,000</div>
+                    </div>
+                </div>
+                <div class="flex w-full text-xs">
+                    <div class="flex w-5/12">
+                        <div class="flex-1 pr-3 text-left font-semibold">High</div>
+                        <div class="px-3 text-right" x-text="stockTicker.price.high.toFixed(3)">3500</div>
+                    </div>
+                    <div class="flex w-7/12">
+                        <div class="flex-1 px-3 text-left font-semibold">P/E ratio</div>
+                        <div class="pl-3 text-right" x-text="stockTicker.price.ratio.toFixed(2)">1500</div>
+                    </div>
+                </div>
+                <div class="flex w-full text-xs">
+                    <div class="flex w-5/12">
+                        <div class="flex-1 pr-3 text-left font-semibold">Low</div>
+                        <div class="px-3 text-right" x-text="stockTicker.price.low.toFixed(3)">0</div>
+                    </div>
+                    <div class="flex w-7/12">
+                        <div class="flex-1 px-3 text-left font-semibold">Dividend yield</div>
+                        <div class="pl-3 text-right" x-text="`${stockTicker.price.dividend}%`">0%</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="absolute bottom-0 pb-2 text-gray-700 text-xs w-full text-center">
+</div>
+
+<script>
+Number.prototype.m_formatter = function() {
+    return this > 999999 ? (this / 1000000).toFixed(1) + 'M' : this
+};
+let stockTicker = function(){
+    return {
+        stockFullName: 'Ethereum.',
+        stockShortName: 'ETH',
+        price: {
+            current: 432.,
+            open: 3.230,
+            low: 4.215,
+            high: 2.325,
+            cap: 93765011,
+            ratio: 20.10,
+            dividend: 1.67
+        },
+        chartData: {
+            labels: ['Sept 6','','','','Sept 7th','','','','Sept 8','','','','Sept 9'],
+            data: [2.23,2.215,2.22,2.25,2.245,2.27,2.28,2.29,2.3,2.29,2.325,2.325,2.32],
+        },
+        renderChart: function(){
+            let c = false;
+
+            Chart.helpers.each(Chart.instances, function(instance) {
+                if (instance.chart.canvas.id == 'chart') {
+                    c = instance;
+                }
+            });
+
+            if(c) {
+                c.destroy();
+            }
+
+            let ctx = document.getElementById('chart').getContext('2d');
+
+            let chart = new Chart(ctx, {
+                type: "line",
+                data: {
+                    labels: this.chartData.labels,
+                    datasets: [
+                        {
+                            label: '',
+                            backgroundColor: "rgba(255, 255, 255, 0.1)",
+                            borderColor: "rgba(255, 255, 255, 1)",
+                            pointBackgroundColor: "rgba(255, 255, 255, 1)",
+                            data: this.chartData.data,
+                        },
+                    ],
+                },
+                layout: {
+                    padding: {
+                        right: 10
+                    }
+                },
+                options: {
+                    legend: {
+                        display: false,
+                    },
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                fontColor: "rgba(255, 255, 255, 1)",
+                            },
+                            gridLines: {
+                                display: false,
+                            },
+                        }],
+                        xAxes: [{
+                            ticks: {
+                                fontColor: "rgba(255, 255, 255, 1)",
+                            },
+                            gridLines: {
+                                color: "rgba(255, 255, 255, .2)",
+                                borderDash: [5, 5],
+                                zeroLineColor: "rgba(255, 255, 255, .2)",
+                                zeroLineBorderDash: [5, 5]
+                            },
+                        }]
+                    }
+                }
+            });
+        }
+    }
+}
+</script>
+<!----- End Line Chart Stock Module-->
+<!----- start analytics module-->
+<script src="https://cdn.jsdelivr.net/npm/countup@1.8.2/dist/countUp.min.js"></script>
+
+<style>@import url('https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.min.css')</style>
+
+<div class="min-w-screen flex items-center justify-center px-5 py-5">
+    <div class="bg-gray-800 text-gray-500 rounded shadow-xl py-5 px-5 w-full sm:w-2/3 md:w-1/2 lg:w-1/3" x-data="{cardOpen:false,cardData:cardData()}" x-init="$watch('cardOpen', value => value?(cardData.countUp($refs.total,0,11602,null,0.8),cardData.sessions.forEach((el,i) => cardData.countUp($refs[`device${i}`],0,cardData.sessions[i].size,null,1.6))):null);setTimeout(()=>{cardOpen=true},100)">
+        <div class="flex w-full">
+            <h3 class="text-lg font-semibold leading-tight flex-1"> Portfolio</h3>
+            <div class="relative h-5 leading-none">
+                <button class="text-xl text-gray-500 hover:text-gray-300 h-6 focus:outline-none" @click.prevent="cardOpen=!cardOpen">
+                    <i class="mdi" :class="'mdi-chevron-'+(cardOpen?'up':'down')"></i>
+                </button>
+            </div>
+        </div>
+        <div class="relative overflow-hidden transition-all duration-500" x-ref="card" x-bind:style="`max-height:${cardOpen?$refs.card.scrollHeight:0}px; opacity:${cardOpen?1:0}`">
+            <div>
+                <div class="pb-4 lg:pb-6">
+                    <h4 class="text-2xl lg:text-3xl text-white font-semibold leading-tight inline-block" x-ref="total">0</h4>
+                </div>
+                <div class="pb-4 lg:pb-6">
+                    <div class="overflow-hidden rounded-full h-3 bg-gray-800 flex transition-all duration-500" :class="cardOpen?'w-full':'w-0'">
+                        <template x-for="(item,index) in cardData.sessions">
+                            <div class="h-full" :class="`bg-${item.color}`" :style="`width:${item.size}%`"></div>
+                        </template>
+                    </div>
+                </div>
+                <div class="flex -mx-4">
+                    <template x-for="(item,index) in cardData.sessions">
+                        <div class="w-1/3 px-4" :class="{'border-l border-gray-700':index!==0}">
+                            <div class="text-sm">
+                                <span class="inline-block w-2 h-2 rounded-full mr-1 align-middle" :class="`bg-${item.color}`">&nbsp;</span>
+                                <span class="align-middle" x-text="item.label">&nbsp;</span>
+                            </div>
+                            <div class="font-medium text-lg text-white">
+                                <span :x-ref="`device${index}`">0</span>%
+                            </div>
+                        </div>
+                    </template>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="absolute bottom-0 pb-2 text-gray-700 text-xs w-full text-center">
+  See more: <a href="https://codepen.io/ScottWindon" class="underline hover:text-gray-500" target="_blank">https://codepen.io/ScottWindon</a>
+</div>
+
+<script>
+let cardData = function() {
+    return {
+        countUp: function(target,startVal,endVal,decimals,duration){
+            const countUp = new CountUp(target,startVal||0,endVal,decimals||0,duration||2);
+            countUp.start();
+        },
+        sessions: [
+            {
+                "label": "Ethereum",
+                "size": 60,
+                "color": "indigo-600"
+            },
+            {
+                "label": "Bitcoin",
+                "size": 30,
+                "color": "orange-400"
+            },
+            {
+                "label": "Aave",
+                "size": 10,
+                "color": "pink-200"
+            }
+        ]
+    }
+}
+</script>
+<!----- end analytics module ----->
+
 
 
 	</body>
